--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <div id="vue-app">
-        <form>
-            <input ref="input" id="text">
-            <button id="submit" v-on:click="showtask(input)">Click</button>
-        </form>
-    </div>   
+        <div class="container">
+            <input type="text" ref="input" id="text"/>
+            <button id="submit" v-on:click="showtask()">Click</button>
+            <div>{{task}}</div>
+           </div>
+</div>
 </body>
 <script src="javascript/app.js"></script>
 </html>
